feat: track traffic for bound subscription devices
